gl31-master/src/test/deca/syntax/valid/complet/new.deca
// Description:
//    tests de programme correct syntaxiquement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 19/01/2021
class Test{
    void methodeTest(int param1, float param2){
        print(param1,param2);
    }
}
{
    boolean b = new boolean();
    int i = new int();
}
